--- a/Terminal_Customer/View/PageTwo.xaml
+++ b/Terminal_Customer/View/PageTwo.xaml
@@ -10,13 +10,13 @@
     <UserControl.DataContext>
         <vm:PageTwoVM/>
     </UserControl.DataContext>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            
+
             <RowDefinition Height="*"/>
-            
+
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -38,29 +38,20 @@
             <ColumnDefinition Width="*"/>
 
         </Grid.ColumnDefinitions>
-        <TextBlock Text="{Binding Name}" FontSize="20" Grid.ColumnSpan="2"/>
-        <TextBlock Name="txbRegistration" Text="New registration" FontSize="36" Grid.ColumnSpan="2" Grid.Row="1"  Margin="20 5" />
+
+        <TextBlock Name="txbRegistration" Text="New registration" FontSize="36" Grid.ColumnSpan="2"  Margin="10,10,30,0" />
         <TextBlock x:Name="txbEid" FontSize="15" Grid.Row="1" Grid.Column="3" Margin="0"><Run Text="Please put your identitycard "/><LineBreak/><Run Text="in the cardreader and press continue"/></TextBlock>
-        <Label Content="First Name: " Grid.Row="2" Grid.Column="0" Margin="20, 10"/>
-        <Label Content="Last Name:" Grid.Row="3" Grid.Column="0" Margin="20, 10"/>
-        <Label Content="Street:" Grid.Row="4" Grid.Column="0" Margin="20, 10"/>
-        <Label Content="Number:" Grid.Row="4" Grid.Column="2" Margin="20, 10"/>
-        <Label Content="City:" Grid.Row="5" Grid.Column="0" Margin="20, 10"/>
-        <Label Content="Postal Code:" Grid.Row="5" Grid.Column="2" Margin="20, 10"/>
+        <Label Content="First Name: " Grid.Row="2" Grid.Column="0" Margin="10,11,30,9"/>
+        <Label Content="Adress" Grid.Row="3" Grid.Column="0" Margin="10,10,30,10"/>
+
 
         <TextBlock Text="{Binding NewCustomer.CustomerName}" Grid.Row="2" Grid.Column="1" Margin="20, 10"/>
-        <TextBlock Grid.Row="3" Grid.Column="1" Margin="20, 10"/>
-        <TextBlock Text="{Binding NewCustomer.Address}" Grid.Row="4" Grid.Column="1" Margin="20, 10"/>
-        <TextBlock  Grid.Row="4" Grid.Column="3" Margin="20, 10"/>
-        <TextBlock Grid.Row="5" Grid.Column="1" Margin="20, 10"/>
+        <TextBlock Text="{Binding NewCustomer.Address}" Grid.Row="3" Grid.Column="1" Margin="20,13,20,7"/>
         <TextBlock  Grid.Row="5" Grid.Column="3" Margin="20, 10"/>
-        <Image Name="imgFoto" Grid.Column="3" HorizontalAlignment="Left" Height="100" Margin="100,10,0,0" Grid.Row="2" Grid.RowSpan="2" VerticalAlignment="Top" Width="100"/>
-        <Button Content="Confirm" Grid.Column="1" Margin="10,10,179,10" Grid.Row="7" Command="{Binding DataContext.ChangePageCommand,
- RelativeSource={RelativeSource  AncestorType={x:Type Window}}}"  CommandParameter="{Binding DataContext.Pages[2],RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
-        <Button Content="Cancel" Grid.Column="1" Margin="175,10,10,10" Grid.Row="7" Command="{Binding DataContext.ChangePageCommand,
- RelativeSource={RelativeSource  AncestorType={x:Type Window}}}"  CommandParameter="{Binding DataContext.Pages[0],RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
-        <Button Content="Continue" HorizontalAlignment="Left" Margin="10,70,0,0" Grid.Row="1" VerticalAlignment="Top" Width="150" Height="35"/>
-        <Image Grid.Column="3" HorizontalAlignment="Left" Height="100" Margin="128,46,0,0" Grid.Row="2" Grid.RowSpan="3" VerticalAlignment="Top" Width="100"/>
+        <Image Name="imgFoto" Grid.Column="2" HorizontalAlignment="Left" Height="100" Margin="28,11,0,0" Grid.Row="2" Grid.RowSpan="2" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.523,0.451" Source="{Binding NewCustomer.Picture}"/>
+        <Button Content="Confirm" Grid.Column="1" Margin="10,10,179,10" Grid.Row="5" Command="{Binding RegisterCommand}" />
+        <Button Content="Cancel" Grid.Column="1" Margin="175,10,10,10" Grid.Row="5" Command="" />
+
         <Button Content="Continue" Command="{Binding RegisterCommand}" Grid.Column="2" Margin="0" Grid.Row="1" />
 
     </Grid>
