--- a/Desktop_Management/View/PageTwo.xaml
+++ b/Desktop_Management/View/PageTwo.xaml
@@ -44,13 +44,13 @@
                     <Label Content="Logged in as:" Margin="5" Grid.Row="2"/>
                     <TextBlock TextWrapping="Wrap"  Text="{Binding CompanyName}" Grid.Row="1" Grid.Column="1"  Margin="10,10,500,10"/>
                     <TextBlock TextWrapping="Wrap"  Text="{Binding AccountName}" Grid.Row="2" Grid.Column="1"  Margin="10,9,500,10"/>
-                    <TextBox TextWrapping="Wrap"  Text="TextBlock" Grid.Row="4" Grid.Column="1" Width="300" Margin="10,35,530,189" Height="30"/>
+                    <TextBox TextWrapping="Wrap"  Text="{Binding MyPassword}" Grid.Row="4" Grid.Column="1" Width="300" Margin="10,35,530,189" Height="30"/>
 
                     <Label Content="Current password" HorizontalAlignment="Left" Margin="10,30,0,0" Grid.Row="4" VerticalAlignment="Top" Width="126"/>
                     <Label Content="New password" HorizontalAlignment="Left" Margin="10,93,0,0" Grid.Row="4" VerticalAlignment="Top" Width="126"/>
-                    <TextBox TextWrapping="Wrap" Text="TextBlock" Grid.Row="4" Grid.Column="1" Width="300" Height="30" Margin="10,98,530,126"/>
+                    <TextBox TextWrapping="Wrap" Text="{Binding NewPassword}" Grid.Row="4" Grid.Column="1" Width="300" Height="30" Margin="10,98,530,126"/>
                     <Label Content="Repeat new password" HorizontalAlignment="Left" Margin="10,141,0,0" Grid.Row="4" VerticalAlignment="Top" Grid.Column="0"/>
-                    <TextBox TextWrapping="Wrap" Text="TextBlock" Grid.Row="4" Grid.Column="1" Width="300" Height="30" Margin="10,146,530,78"/>
+                    <TextBox TextWrapping="Wrap" Text="{Binding RepeatPassword}" Grid.Row="4" Grid.Column="1" Width="300" Height="30" Margin="10,146,530,78"/>
 
 
                     <TextBlock HorizontalAlignment="Left" FontSize="30"  Margin="10,73,0,0" Grid.Row="3" TextWrapping="Wrap" Text="Change password" VerticalAlignment="Top" Height="44" Width="748" Grid.ColumnSpan="2"/>
@@ -83,29 +83,7 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <GroupBox  Name="Search" Grid.Row="0" Grid.Column="1" Margin="5" Header="Search">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-
-                            </Grid.ColumnDefinitions>
-                            <TextBox Name="txtSearch" Text="Geef je zoekterm in" Margin="5" Grid.Row="0" Grid.Column="0" />
-                            <Button Name="btnSearch"   Content="Search" Margin="20, 5" Grid.Row="2" Grid.Column="1" />
-                            <Label Name="lblNarrowSearch" Content="Narrow search to: " Grid.Row="1" Grid.Column="0" Margin="5" />
-                            <ComboBox Name="cboNarrowSearch" Grid.Row="1" Grid.Column="1" Margin="20,5"/>
-
-
-
-                        </Grid>
-
-                    </GroupBox>
-                    <GroupBox Name="grpbView" Header="View" Grid.Row="1" Grid.Column="1" Margin="5">
+                    <GroupBox Name="grpbView" Header="View" Grid.Column="1" Margin="10,-9,0,230" Grid.RowSpan="2">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
@@ -151,42 +129,19 @@
                     <ListView Name="lstvEmployees" Margin="5" Grid.RowSpan="2" Grid.ColumnSpan="2" ItemsSource="{Binding Employees}" SelectedItem="{Binding SelectedEmployee}">
                         <ListView.View>
                             <GridView>
-                                
+
                                 <GridViewColumn Header="Name" Width="75" DisplayMemberBinding= "{Binding Path=EmployeeName}"/>
 
                                 <GridViewColumn Header="Adress" Width="75" DisplayMemberBinding= "{Binding Path=Address}"/>
                                 <GridViewColumn Header="Phone" Width="75" DisplayMemberBinding= "{Binding Path=Phone}"/>
                                 <GridViewColumn Header="Email" Width="75" DisplayMemberBinding= "{Binding Path=Email}"/>
                                 <GridViewColumn Header="Barcode" Width="75" DisplayMemberBinding= "{Binding Path=Barcode}"/>
-                                
+
 
                             </GridView>
                         </ListView.View>
                     </ListView>
-
-                    <GroupBox  Name="grpbSearchEmployee" Grid.Row="0" Grid.Column="2" Margin="5" Header="Search">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-
-                            </Grid.ColumnDefinitions>
-                            <TextBox Name="txtSearchEmployee" Margin="5" Grid.Row="0" Grid.Column="0" />
-                            <Button Name="btnSearchEmployee"   Content="Search" Margin="20, 5" Grid.Row="2" Grid.Column="1" />
-                            <Label Name="lblNarrowSearchEmployee" Content="Narrow search to: " Grid.Row="1" Grid.Column="0" Margin="5" />
-                            <ComboBox Name="cboNarrowSearchEmployee" Grid.Row="1" Grid.Column="1" Margin="20,5"/>
-
-
-
-                        </Grid>
-
-                    </GroupBox>
-                    <GroupBox Name="grpbViewEmployee" Header="View" Grid.Row="1" Grid.Column="2" Margin="5">
+                    <GroupBox Name="grpbViewEmployee" Header="View" Grid.Column="2" Margin="10,5,0,216" Grid.RowSpan="2">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
@@ -206,7 +161,7 @@
                             <Button Name="btnReadIdentityEmployee" Content="Read Identity" Grid.Column="0" Grid.Row="1" Margin="10" Command="{Binding ReadIdentityCardEmployeeCommand}" IsEnabled="{Binding TestE}"/>
                             <Button Name="btnSaveEmployee" Content="Save" Grid.Column="1" Grid.Row="0" Margin="10" Command="{Binding SaveEmployeeCommand}"/>
                             <Button Name="btnDeleteEmployee" Content="Delete" Grid.Column="2" Grid.Row="0" Margin="10" Command="{Binding DeleteEmployeeCommand}" IsEnabled="{Binding ElementName=lstvEmployees, Path=SelectedItems.Count}"/>
-                            
+
 
                             <Label Name="lblNameEmployee" Content="Name" Grid.Column="0"  Grid.Row="3" Margin="10" />
                             <TextBlock Name="txtNameEmployee" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="10" Text="{Binding SelectedEmployee.EmployeeName}" />
@@ -317,7 +272,7 @@
                     <ListView Name="lstvCustomer" Margin="5" Grid.RowSpan="2" Grid.ColumnSpan="1" ItemsSource="{Binding Customers}" SelectedItem="{Binding SelectedCustomer}">
                         <ListView.View>
                             <GridView>
-                                
+
                                 <GridViewColumn Header="Name" Width="100" DisplayMemberBinding= "{Binding Path=CustomerName}"/>
 
                                 <GridViewColumn Header="Adress" Width="100" DisplayMemberBinding= "{Binding Path=Address}"/>
@@ -326,30 +281,7 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-
-                    <GroupBox  Name="grpbSearchCustomer" Grid.Row="0" Grid.Column="1" Margin="5" Header="Search">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-
-                            </Grid.ColumnDefinitions>
-                            <TextBox Name="txtSearchCustomer" Margin="5" Grid.Row="0" Grid.Column="0" />
-                            <Button Name="btnSearchCustomer"   Content="Search" Margin="20, 5" Grid.Row="2" Grid.Column="1" />
-                            <Label Name="lblNarrowSearchCustomer" Content="Narrow search to: " Grid.Row="1" Grid.Column="0" Margin="5" />
-                            <ComboBox Name="cboNarrowSearchCustomer" Grid.Row="1" Grid.Column="1" Margin="20,5"/>
-
-
-
-                        </Grid>
-
-                    </GroupBox>
-                    <GroupBox Name="grpbViewCostumer" Header="View" Grid.Row="1" Grid.Column="1" Margin="5">
+                    <GroupBox Name="grpbViewCostumer" Header="View" Grid.Column="1" Margin="0,7,10,161" Grid.RowSpan="2">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
@@ -372,7 +304,7 @@
                             <Button Name="btnDeleteCustomer" Content="Delete" Grid.Column="2" Grid.Row="0" Margin="10" Command="{Binding DeleteCustomerCommand}" IsEnabled="{Binding ElementName=lstvCustomer, Path=SelectedItems.Count}"/>
                             <Image Name="imgCustomer" Grid.Row="1" Grid.Column="0" Margin="5" Source="{Binding SelectedCustomer.Picture}" />
                             <Button Content="Read identity card" Grid.Row="1" Grid.Column="1" Margin="5, 100,5,5" Command="{Binding ReadIdentityCardCommand}" IsEnabled="{Binding Test}" />
-                            
+
 
                             <Label Name="lblNameCustomer" Content="Name" Grid.Column="0"  Grid.Row="3" Margin="10" />
                             <TextBlock Name="txtNameCustomer" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="10" Text="{Binding SelectedCustomer.CustomerName}" />
@@ -404,7 +336,7 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView Margin="5" Grid.RowSpan="2" Grid.ColumnSpan="1" ItemsSource="{Binding SalesList}">
+                    <ListView Margin="5,5,55,5" Grid.RowSpan="2" ItemsSource="{Binding SalesList}">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Id" Width="50" DisplayMemberBinding="{Binding Path=Id}" />
@@ -417,42 +349,6 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-
-                    <GroupBox  Name="grpbFilterStatistics" Grid.Row="0" Grid.Column="1" Margin="5" Header="Filter">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-
-
-                            </Grid.ColumnDefinitions>
-                            <Label Name="lblFromStat" Grid.Row="0" Content="From" Margin="10"/>
-                            <DatePicker Grid.Column="1" Grid.Row="0" Margin="10" />
-
-                            <Label Name="lblUntillStat" Grid.Row="0" Grid.Column="2" Content="Untill" Margin="10"/>
-                            <DatePicker Grid.Column="3" Grid.Row="0" Margin="10" />
-
-                            <Label Name="lblRegister" Content="Register" Grid.Row="1" Margin="10"/>
-                            <ComboBox Name="cboRegister" Grid.Row="1" Grid.Column="1" Margin="10" />
-
-                            <Label Name="lblProduct" Content="Product" Grid.Row="2" Margin="10"/>
-                            <ComboBox Name="cboProduct" Grid.Row="2" Grid.Column="1" Margin="10" ItemsSource="{Binding Products}"/>
-                            <Button Name="btnApplyStat" Content="Apply" Grid.Column="0" Grid.Row="3" Margin="5" Grid.ColumnSpan="2" />
-
-
-                        </Grid>
-
-                    </GroupBox>
 
                 </Grid>
             </TabItem>
