--- a/Terminal_Customer/View/MainWindow.xaml
+++ b/Terminal_Customer/View/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:Terminal_Customer.ViewModel"
         xmlns:v="clr-namespace:Terminal_Customer.View"
-        Title="MainWindow" Height="768" Width="1024">
+        Title="MainWindow" Height="768" Width="1024" Background="DarkGray">
     <Window.DataContext>
         <vm:ApplicationVM/>
     </Window.DataContext>
