--- a/Terminal_Customer/View/PageThree.xaml
+++ b/Terminal_Customer/View/PageThree.xaml
@@ -70,8 +70,8 @@
             <TextBlock  Grid.Row="1" Grid.Column="1" Margin="20, 10" Text="{Binding LoggedInCustomer.Address}"/>
           
         </Grid>
-        <Label Content="Current saldo:" Grid.Column="1" FontSize="20"/>
-        <TextBlock Name="txbSaldo" Grid.Column="1" Height="50" FontSize="20" Margin="112,10,10,235" Text="{Binding LoggedInCustomer.Balance}"/>
+        <Label Content="Current saldo:" Grid.Column="1" FontSize="20" Margin="10,30,-10,124" Grid.RowSpan="2"/>
+        <TextBlock Name="txbSaldo" Grid.Column="1" Height="50" FontSize="20" Margin="160,30,-38,227" Text="{Binding LoggedInCustomer.Balance}"/>
 
         <GroupBox Header="Charge your card" FontSize="12" Name="grpCharge" Grid.Column="1" Grid.RowSpan="3" Margin="10,100,10,10">
             <Grid Name="grdCharge">
