--- a/Terminal_Customer/View/PageTwo.xaml
+++ b/Terminal_Customer/View/PageTwo.xaml
@@ -6,7 +6,7 @@
              xmlns:vm="clr-namespace:Terminal_Customer.ViewModel"
              xmlns:v="clr-namespace:Terminal_Customer.View"
              mc:Ignorable="d" 
-             d:DesignHeight="768" d:DesignWidth="1024">
+             d:DesignHeight="768" d:DesignWidth="1024" Background="DarkGray">
     <UserControl.DataContext>
         <vm:PageTwoVM/>
     </UserControl.DataContext>
@@ -49,7 +49,7 @@
         <TextBlock Text="{Binding NewCustomer.Address}" Grid.Row="3" Grid.Column="1" Margin="20,13,20,7"/>
         <TextBlock  Grid.Row="5" Grid.Column="3" Margin="20, 10"/>
         <Image Name="imgFoto" Grid.Column="2" HorizontalAlignment="Left" Height="100" Margin="28,11,0,0" Grid.Row="2" Grid.RowSpan="2" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.523,0.451" Source="{Binding NewCustomer.Picture}"/>
-        <Button Content="Confirm" Grid.Column="1" Margin="10,10,179,10" Grid.Row="5" Command="{Binding RegisterCommand}" />
+        <Button Content="Confirm" Grid.Column="1" Margin="10,10,179,10" Grid.Row="5" Command="{Binding ConfirmCommand}" />
         <Button Content="Cancel" Grid.Column="1" Margin="175,10,10,10" Grid.Row="5" Command="" />
 
         <Button Content="Continue" Command="{Binding RegisterCommand}" Grid.Column="2" Margin="0" Grid.Row="1" />
